<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scroll_view"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgrnd"
    android:paddingTop="2sp"
    android:padding="2sp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/custName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middleName"
        android:layout_marginTop="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/middleNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15sp"
        android:ems="10"
        android:inputType="textPersonName" />

    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:layout_marginTop="14sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="11sp"
        android:ems="10"
        android:inputType="textPersonName" >
        
    </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNum"
        android:layout_marginTop="14sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/phoneNumEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="13sp"
        android:ems="10"
        android:inputType="phone" >
        
    </EditText>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_white"
        android:layout_marginTop="25sp" />

    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/loan_amt"
        android:textAppearance="?android:attr/textAppearanceMedium"
         >
    </TextView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_weight="1.0" >
    </EditText>
    
    
    
    </LinearLayout>

    <TextView
        android:id="@+id/responseTextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <EditText
        android:id="@+id/commentsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="3" >
    </EditText>

    <Button
        android:id="@+id/okButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_shape"
        android:text="@string/okbutton"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
</ScrollView>