<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    android:background="@drawable/backgrnd"
    android:orientation="vertical"
    tools:context=".AccountNum" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterAcc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#111" />
    
    <EditText
        android:id="@+id/acc_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    
    <Button
        android:id="@+id/checkBalBut"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_shape"
        android:text="@string/okbutton"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:background="#BBBBBB" />

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/name"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:inputType="none" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/status"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/statusEditText"
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:inputType="none" >
        </EditText>
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/bal_cleared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/balance1"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/bal_cleared_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:inputType="none" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bal_uncleared"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/TextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/balance2"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/bal_uncleared_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:inputType="none" >
        </EditText>
    </LinearLayout>

</LinearLayout>