<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgrnd"
    android:padding="5sp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CustomerDetails" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cust_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/custDetails_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/okBut"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_shape"
            android:text="@string/okbutton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:background="#BBBBBB" />

        <LinearLayout
            android:id="@+id/ac_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <TextView
                android:id="@+id/responseTextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/custName"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="none" >
            </EditText>
        </LinearLayout>

       

        <LinearLayout
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/responseTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/dateOfBirth"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="none" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/responseTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/custNumber"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/custNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="none" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <TextView
                android:id="@+id/responseTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/idType"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/idTypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="none" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/idnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/responseTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/idNumber"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/idNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="none" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <TextView
                android:id="@+id/responseTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/phoneNum"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:id="@+id/phoneNumEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:inputType="phone" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

</ScrollView>