<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editWalText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/wal_num"
            android:inputType="number"
            android:textSize="20sp" />

        <requestFocus android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <EditText
            android:id="@+id/etxt_fromdate"
            android:layout_width="0dp"
            android:layout_height="48dp"

            android:layout_weight="0.51"
            android:hint="@string/start_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxt_todate"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".5"
            android:hint="@string/end_date"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/trans_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="Submit"
        android:textColor="#fff" />
</LinearLayout>