<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd"
    android:padding="5sp"
    android:orientation="vertical"
    tools:context=".Cust_Loan_Origination" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_num"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/accnumEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/accName"
            android:textAppearance="?android:attr/textAppearanceMedium"  >
        </TextView>

        <TextView
            android:id="@+id/nameofAccEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    
            android:layout_marginTop="8sp"
            android:layout_weight="40"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
        <TextView
            android:id="@+id/accBal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    
            android:layout_marginTop="8sp"
            android:layout_weight="30"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />
    </LinearLayout>

    <Button
        android:id="@+id/getAccNameBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_shape"
        android:textColor="#FFFFFF"
        android:text="@string/okbutton"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:background="#BBBBBB" />

    

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/loan_amt"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/responseTextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/comments"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/commentsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:inputType="none"
            android:maxLines="3" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_shape"
        android:text="@string/okbutton"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>